--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,27 @@
 :root {
     /* CSS HEX */
-    --onyx: #3e4444ff;
+    --onyx: rgb(166, 167, 167);
+    --dark-onyx: rgb(148, 156, 156);
     --dark-grey_black: rgb(37, 41, 41);
     --dark-grey_black-hover: rgb(48, 53, 53);
     --dim-gray: #616b6bff;
     --bud-green: #82b74bff;
+    --bud-green__hover: rgb(138, 194, 78);
     --dark-moss-green: #405d27ff;
     --army-green: #32481eff;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--bud-green);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--bud-green__hover);
 }
 
 html, body {
@@ -15,19 +30,28 @@ html, body {
     height: 100%;
     width: 100%;
     background-color: var(--onyx);
+    scroll-behavior: smooth;
+    font-family: 'Rubik', sans-serif;
 }
 
+.header-container {
+    width: 100%;
+    height: 73px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    z-index: 2;
+    position: fixed;
+}
 .header {
     width: 100%;
     height: 70px;
     background-color: var(--dark-grey_black);
-    border-bottom: 3px solid var(--dark-moss-green);
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
 }
-
 .projects-link__container {
     color: white;
     height: 100%;
@@ -35,19 +59,115 @@ html, body {
     flex-direction: column;
     justify-content: center;
 }
-
 .no-style {
     color: inherit;
     font-style: none;
     text-decoration: none;
 }
-
 .home-link {
     padding-left: 15px;
     padding-right: 15px;
     font-size: 20px;
 }
-
 .projects-link__container:hover {
     background-color: var(--dark-grey_black-hover);
+}
+
+.progress-container {
+    width: 100%;
+    height: 3px;
+    background-color: var(--army-green);
+}
+.progress-bar {
+    height: 8px;
+    background: var(--bud-green);
+    width: 0%;
+}
+
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 0;
+}
+.social-btn {
+    display: block;
+    text-align: center;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 50px;
+}
+
+.sidebar-container {
+    background-color: var(--dark-grey_black);
+    width: 160px;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.project-header {
+    color: white;
+    font-weight: normal;
+    padding-right: 6px;
+}
+.project-btns-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+.project-btn {
+    text-decoration: none;
+    color: white;
+    background-color: var(--bud-green);
+    width: 80px;
+    padding: 10px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    transition: padding-left 0.3s;
+    margin-bottom: 5px;
+}
+.project-btn:hover {
+    padding-left: 25px;
+}
+
+.main-container {
+    width: 100%;
+    padding-top: 73px;
+    height: calc(100% - 73px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.main-container__body {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: var(--dark-onyx);
+}
+.spacer-container {
+    height: 573px;
+    width: 100%;
+}
+.main-container__body__main {
+    width: calc(100% - 160px);
+    margin-left: 160px;
+    height: 519.48px;
+    overflow: hidden;
+}
+.page-content {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
