--- a/src/css/index.css
+++ b/src/css/index.css
@@ -352,9 +352,14 @@ html, body {
     justify-content: flex-start;
 }
 .project__cats__overlay__organizer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
     overflow: auto;
     margin: 20px;
     width: calc(100% - 40px);
+    min-height: 500px;
 }
 .project-card {
     float: left;
@@ -373,7 +378,7 @@ html, body {
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.7s;
     transform-style: preserve-3d;
 }
 
@@ -449,4 +454,72 @@ html, body {
     justify-content: flex-start;
     align-items: center;
     overflow: hidden;
+}
+.fa-credit-div {
+    margin-top: 60px;
+}
+.fa-credit-div__link {
+    color: rgb(0, 174, 255);
+}
+.proj-link {
+    color: rgb(0, 174, 255);
+}
+
+.organization-container-layout {
+    overflow: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+.organization-container-layout__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 600px;
+}
+.organization-container-layout__info > div {
+    font-size: 18px;
+}
+.organization-container-layout__logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.proj-page-main {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: calc(100% - 120px);
+}
+.p-p-main__side-cont {
+    height: 100%;
+    margin: 0px 40px;
+    width: calc(50% - 80px);
+    overflow: auto;
+}
+.p-p-main__side {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.p-p-main__p-tag {
+    font-size: 18px;
+    line-height: 24px;
+}
+.p-p-main__p-tag > li {
+    padding-top: 10px; 
+    padding-bottom: 10px;
+}
+.p-p-main__p-tag > li:first-of-type {
+    padding-top: 0px;
 }
