--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,6 +35,10 @@ html, body {
     color: white;
 }
 
+body {
+    overflow: hidden;
+}
+
 .header-container {
     width: 100%;
     height: 73px;
@@ -522,4 +526,97 @@ html, body {
 }
 .p-p-main__p-tag > li:first-of-type {
     padding-top: 0px;
+}
+.release {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+}
+.p-p-main__side__v2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.switch-container {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 25.5px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 19.5px;
+    width: 19.5px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .3s;
+    transition: .3s;
+}
+input:checked + .slider {
+    background-color: var(--bud-green);
+}
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--bud-green);
+}  
+input:checked + .slider:before {
+    -webkit-transform: translateX(19.5px);
+    -ms-transform: translateX(19.5px);
+    transform: translateX(19.5px);
+}
+
+.component-overview {
+    margin: 0px 40px;
+    font-size: 18px;
+    line-height: 24px;
+}
+.pw-components-container {
+    margin: 40px 10px;
+    width: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.pw-component-info {
+    width: 88%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.pw-component-info__blurb {
+    margin: 0px 40px;
+    width: calc(100% - 80px);
+    line-height: 24px;
 }
