--- a/src/pages/minesweeper/animated/src/css/minesweeper.css
+++ b/src/pages/minesweeper/animated/src/css/minesweeper.css
@@ -1,7 +1,9 @@
 html, body {
     height: 100%;
     width: 100%;
-    background: #1b1a24;
+    padding: 0;
+    margin: 0;
+    background: transparent;
 }
 
 .page-centerer {
