--- a/src/pages/tetris/src/css/index.css
+++ b/src/pages/tetris/src/css/index.css
@@ -2,7 +2,7 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0;
-  background: #1b1a24;
+  background: transparent;
 }
 
 .page-centerer {
@@ -20,8 +20,8 @@ html, body {
 }
 
 .canvas-container{
-  width: 400px;
-  height: 800px;
+  width: 300px;
+  height: 600px;
 }
 
 .holding-div {
@@ -41,8 +41,8 @@ html, body {
 }
 
 .header {
-  height: 60px;
-  width: 400px;
+  height: 40px;
+  width: 300px;
   background: #e89c0e;
   display: flex;
   column-gap: 7em;
@@ -62,8 +62,8 @@ html, body {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   overflow: auto; /* Enable scroll if needed */
-  width: 400px;
-  top: 300px;
+  width: 300px;
+  top: 225px;
   z-index: 4;
 }
 
@@ -71,7 +71,7 @@ html, body {
   left: 38%;
   background-color: transparent;
   margin: 5%; /* 15% from the top and centered */
-  padding: 20px;
+  padding: 15px;
   border: 1px solid #e89c0e;
   display: flex;
   flex-direction: column;
@@ -81,17 +81,41 @@ html, body {
 }
 
 .sak-header {
-  color: rgb(133, 131, 131);
+  -webkit-animation: pulse 2s ease-in-out infinite alternate;
+  animation: pulse 2s ease-in-out infinite alternate;
 }
 
 .hold-header {
   color: white;
-  height: 60px;
-  width: 200px;
+  height: 40px;
+  width: 150px;
   background: #e89c0e;
   display: flex;
   column-gap: 7em;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    color: rgb(133, 131, 131);
+  }
+  50% {
+    color: white;
+  }
+  100% {
+    color: rgb(133, 131, 131);
+  }
+}
+@keyframes pulse {
+  0% {
+    color: rgb(133, 131, 131);
+  }
+  50% {
+    color: white;
+  }
+  100% {
+    color: rgb(133, 131, 131);
+  }
 }
