--- a/src/css/index.css
+++ b/src/css/index.css
@@ -74,8 +74,8 @@ body {
     padding-right: 15px;
     font-size: 20px;
 }
-.projects-link__container:hover {
-    background-color: var(--dark-grey_black-hover);
+.home-link:hover {
+    cursor: default;
 }
 
 .progress-container {
@@ -627,4 +627,24 @@ input:checked + .slider:before {
 }
 .featured-proj-img {
     width: 85%;
+}
+.org-img {
+    height: 460px;
+    padding: 20px;
+}
+.responsive-iframe-container {
+    position: relative;
+    width: 100%;
+    padding-top: 63.44%; 
+    overflow: hidden;
+}
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: 0 0;
 }
