--- a/src/pages/minesweeper/animated/src/css/modal.css
+++ b/src/pages/minesweeper/animated/src/css/modal.css
@@ -1,16 +1,16 @@
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: none; 
+  position: fixed; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 20%; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 20%; 
+  padding: min(4.444vw, 20px);
   border: 1px solid #888;
   display: flex;
   flex-direction: column;
@@ -19,7 +19,7 @@
 }
 
 .newGameButton {
-  width: 100px;
+  width: min(37.175vw, 100px);
   padding: 10px;
   color: white;
   background-color: #e89c0e;
