--- a/src/pages/minesweeper/original/src/css/minesweeper.css
+++ b/src/pages/minesweeper/original/src/css/minesweeper.css
@@ -1,35 +1,17 @@
 html, body {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: transparent;
+  padding: 0;
+  margin: 0;
+  background: transparent;
 }
-
 .page-centerer {
-    height: 100%;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    justify-content: center;
-    align-content: center;
+  display: flex;
+  overflow: hidden;
 }
-
 .game-container {
   display: grid;
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: min(13.333vw, 60px) 1fr;
 }
-
-.flags-left {
-  width: 30px;
-  height: 30px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
 .header {
-  height: 60px;
   background: #e89c0e;
   display: flex;
   column-gap: 7em;
@@ -37,34 +19,6 @@ html, body {
   align-items: center;
   justify-content: flex-start;
 }
-
-.flag {
-
-}
-
-.flag__img {
-  display: block;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.mine__img {
-  display: block;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.vaild:hover {
-  background: rgb(126, 119, 119) !important;
-}
-
-.valid {
-}
-
 .checked {
   display: flex;
   flex-direction: column;
@@ -72,67 +26,86 @@ html, body {
   align-items: center;
   font-family: 'Baloo Tamma 2', cursive;
 }
+.valid {
 
+}
+.vaild:hover {
+  background: rgb(126, 119, 119) !important;
+}
 .light-tan {
   background: tan !important;
 }
-
 .dark-tan {
   background: #998263 !important;
 }
-
 .mine-revealed {
   /*background: red !important;*/
 }
-
 .mine {
   /*background: orange !important;*/
 }
-
 .light-grey {
   background: rgb(73, 70, 70);
 }
-
 .dark-grey {
   background: rgb(49, 47, 47);
 }
-
-
+.flag {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.flags-left {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.flags-left__img {
+  height: 93.33%;
+}
+.mine__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.flag__img {
+  display: block;
+  width: 80%;
+  height: 80%;
+}
 .game-board-difficult {
-  grid-template-columns: repeat(24, 25px);
+  grid-template-columns: repeat(24, min(4.167vw, 25px));
   background: rgb(49, 47, 47);
   display: grid;
   row-gap: 0em;
-  height: 500px;
-  width: 600px;
+  height: min(83.333vw, 500px);
+  width: min(100vw, 600px);
 }
-
 .game-board-difficult > div{
-  height: 25px;
+  height: min(4.167vw, 25px);
 }
-
 .game-board-medium {
-  grid-template-columns: repeat(18, 30px);
-  height: 420px;
-  width: 540px;
+  grid-template-columns: repeat(18, min(5.556vw, 30px));
+  height: min(77.778vw, 420px);
+  width: min(100vw, 540px);
   background: rgb(49, 47, 47);
   display: grid;
   row-gap: 0em;
 }
-
 .game-board-medium > div{
-  height: 30px;
+  height: min(5.556vw, 30px);
 }
-
 .game-board-easy {
-  grid-template-columns: repeat(10, 45px);
-  height: 360px;
-  width: 450px;
+  grid-template-columns: repeat(10, min(10vw, 45px));
+  height: min(80vw, 360px);
+  width: min(100vw, 450px);
   background: rgb(49, 47, 47);
   display: grid;
   row-gap: 0em;
 }
-
 .game-board-easy > div{
-  height: 45px;
+  height: min(10vw, 45px);
 }
